--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -11,7 +11,7 @@
 	<input type="password" id="password" name="user[password]"><br>
 
 	<input type="submit" value="Submit">
-</form> -->
+</form>
 
 <%= form_tag("/users", method: "post") do %>
 	<%= label_tag(:username, "Username") %>
@@ -24,4 +24,17 @@
 	<%= password_field_tag(:password) %><br>
 
 	<%= submit_tag("Submit") %>
+<% end %> -->
+
+<%= form_for @user do |f| %>
+	<%= f.label :username %>
+	<%= f.text_field :username %><br>
+
+	<%= f.label :email %>
+	<%= f.text_field :email, placeholder: "example@example.com" %><br>
+
+	<%= f.label :password %>
+	<%= f.password_field :password %><br>
+
+	<%= f.submit "Submit" %>
 <% end %>
